# WimFileManegerEditorCXX

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  build.cpp
app/: data.txt
include/: commandhandler.hpp  communist.hpp  details.hpp  element.hpp  fmobject.hpp  terminal.hpp  usercommand.hpp
src/: commandhandler.cpp  communist.cpp  customexception.cpp  element.cpp  filemaneger.cpp  fmobject.cpp  funcptr.cpp  main.cpp  terminal.cpp  usercommand.cpp
src/header/: communist.hpp  customexception.hpp  details.hpp  element.hpp  filemaneger.hpp  fmobject.hpp  funcptr.hpp  terminal.hpp  usercommand.hpp
utils/: resulthandler.cpp
utils/header/: resulthandler.hpp
utils/include/: result.hpp  resulthandler.hpp  uresult.hpp  utildef.hpp
utils/src/: resulthandler.cpp
